# rally_bot

./: .gitignore  README.md  api_utils.py  data_fetcher.py  data_utils.py  geocode_cache.json  gitignore  gui.py  gunicorn.conf.py  notification_history.json  pyproject.toml  requirements.txt  run_bot.py  rutas_interactivas.html  station_routes.json  user_date_filters.json  user_favorites.json  user_names.json
assets/: 1.avif  EU_Comfort_Standard_5_Auto_Select_A_.avif  ZkIknEFLKBtrW0m0_005Atlas__Sanojajesus__Indie_Campers__29.avif  ZkIknEFLKBtrW0m0_005Atlas__Sanojajesus__Indie_Campers__29__1_.avif  ZkJGSEFLKBtrW1B__NOMADPOPTOP_HEROIMAGE__1_.avif  aD__qLh8WN_LVkic_ImageGrid_5___2_.avif  aDgSKydWJ_7kSqXY_ImageGrid_6___1_.avif  aEAWwrh8WN_LVk29_AtlasHero.avif  aEFP77h8WN_LVoff_ComfortLongHero.avif  aEa_0rh8WN_LV5Er_CaliforniaHeroBeach.avif  aEmNLLNJEFaPX3pL_NomadOldHero__1_.avif  aacWhFxvIZEnjSMz_Active_5x.avif  aacWhFxvIZEnjSMz_Active_5x__1_.avif  aaca0lxvIZEnjSPD_FAMILY_5x__2_.avif  aaccJlxvIZEnjSQk_grand_5x__1_.avif
