[project]
name = "rally-bot"
version = "0.1.0"
description = "Roadsurfer Rally Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]==20.7",
    "folium==0.15.1",
    "tqdm>=4.66.1",
    "geopy>=2.4.1",
    "branca>=0.6.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "urllib3>=2.1.0",
    "python-telegram-bot-calendar==1.0.5",
]
